Fixed alignment of the responses
Fixed alignment of the responses

--- a/resources/static/imageSelect.css
+++ b/resources/static/imageSelect.css
@@ -5,8 +5,8 @@
 .adc-imageSelect .responseItem
 {
     /* Element */
-	display:block;
-	float:left;
+	display:inline-block;
+	/*float:left;*/
 	/*width:130px !important;*/
 	/*height:60px !important;*/
 	margin:0 5px 10px 5px;
